--- a/sass/base/_config.scss
+++ b/sass/base/_config.scss
@@ -1,12 +1,17 @@
-
-
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    background-color: #FFFFFF;
+
+a {
+    text-decoration: none;
+    color: black;
+    
+}
+
+
+ul {
+    list-style-type: none;
 }
