--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,4 +1,6 @@
 // Load components
 @import"./base/config";
 @import "./components/nav";
+@import "./components/building";
+@import "./components/buildingSlider";
 
