--- a/sass/components/_building.scss
+++ b/sass/components/_building.scss
@@ -1,16 +1,12 @@
 #building {
     width: 100%;
-    margin-top: 250px;
+    margin-top: 200px;
 
     .wrapper {
-        max-width: 1200px;
+        max-width: 80%;
         margin: auto;
         display: flex;
         flex-direction: column;
-
-        .building-wrapper {
-            // border: 1px solid red;
-        }
 
         .img-wrapper {
             // border: 1px solid green;
