map section added

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -3,4 +3,6 @@
 @import "./components/nav";
 @import "./components/building";
 @import "./components/buildingSlider";
+@import "./components/popup";
+@import "./components/map";
 
