--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -1,4 +1,8 @@
 section#registration-popup {
+
+    // Popup Color 59BAFC
+    // Logo URL https://i.ibb.co/H23p2rw/Asset-1.png
+
     .wrapper {
         max-width: 80%;
         margin: auto;
@@ -16,11 +20,17 @@ section#registration-popup {
 
         .logo {
             display: flex;
+            background-color: #59BAFC;
             flex-direction: column;
             border: 1px solid black;
             height: 100%;
             justify-content: center;
             align-items: center;
+
+            p {
+                color: white;
+                font-size: 30px;
+            }
         }
 
         .message-form {
@@ -33,18 +43,71 @@ section#registration-popup {
         }
 
         .message-form .headline-wrapper {
-            border: 1px solid black;
+            // border: 1px solid black;
             width: 100%;
             padding: 40px;
             text-align: center;
+
+            h1 {
+                color: #59BAFC;
+                font-size: 19px;
+            }
         }
 
         .message-form .form-group {
             display: flex;
             flex-direction: column;
             width: 100%;
-            border: 1px solid black;
+            // border: 1px solid black;
+
+            label {
+                padding-left: 5px;
+            }
+
+            textarea {
+                border: 2px solid #59BAFC;
+                margin-top: 5px;
+                border-radius: 10px;
+                padding: 20px;
+                resize: none;
+            }
+
+            input[type="text"],
+            input[type="email"] {
+                border: none;
+                border-bottom: 2px solid #59BAFC;
+                padding: 10px 5px;
+                margin-bottom: 10px;
+                outline: none;
+            }
         }
+
+        .submit-btn {
+
+            padding: 10px;
+
+            input[type="submit"] {
+                outline: none;
+                border: none;
+                padding: 10px 25px;
+                background-color: #59BAFC;
+                color: white;
+                border-radius: 5px;
+                font-size: 14px;
+                cursor: pointer;
+                box-shadow: 1px 1px 4px rgba(0, 0,0, 0.2);
+                transition: all 0.3s ease;
+
+                &:hover {
+                    background-color: rgb(136, 207, 255);
+                    transition: 0.3s ease;
+                }
+            }
+
+        
+        }
+        
+
     }
 
     #popup >* {
