--- a/sass/index.scss
+++ b/sass/index.scss
@@ -11,4 +11,5 @@
 @import "./components/buildingSlider";
 @import "./components/popup";
 @import "./components/map";
+@import "./components/about";
 
