--- a/sass/components/_buildingSlider.scss
+++ b/sass/components/_buildingSlider.scss
@@ -1,8 +1,7 @@
 #building-slider {
     width: 100%;
-    border: 1px solid red;
     background-color: #565656;
-    padding: 50px 0;
+    padding: 100px 0;
 
     // Slider color 565656
     
@@ -13,14 +12,39 @@
         margin: auto;
         display: flex;
         flex-direction: row;
-        border: 1px solid black;
-        height: 100%;
+        height: 50vh;
 
 
         .buttons-wrapper {
             display: flex;
             flex-direction: column;
             flex: 1;
+            margin-right: 10px;
+
+
+            h4 {
+                color: white;
+                text-align: center;
+                margin-top: 20px;
+            }
+
+            button {
+                outline: none;
+                border: none;
+                font-size: 80px;
+                background: transparent;
+                transition: 0.3s ease all;
+                cursor: pointer;
+                margin: 20px;
+                color: white;
+            }
+
+            button:hover {
+                transition: 0.2 ease all;
+                color: #59BAFC;
+                cursor: pointer;
+            }
+
         }
 
         .slider-wrapper {
