--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -1,28 +1,49 @@
 section#registration-popup {
 
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.466);
+    // display: flex;
+    // // justify-content: center;
+    // align-items: center;
+
     // Popup Color 59BAFC
     // Logo URL https://i.ibb.co/H23p2rw/Asset-1.png
 
     .wrapper {
-        max-width: 80%;
-        margin: auto;
-        border: 1px solid blue;
+        max-width: 50%;
         position: relative;
         display: flex;
         justify-content: center;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
     }
 
     #popup {
         height: 60vh;
-        border: 1px solid red;
         flex-basis: 80%;
         display: flex;
+        box-shadow: 1px 1px 4px rgba(0, 0,0, 0.4);
+        position: relative;
+
+        #toggler {
+            position: absolute;
+            right: 30px;
+            top: 30px;
+            font-size: 40px;
+            color: #59BAFC;
+            cursor: pointer;
+        }
 
         .logo {
             display: flex;
             background-color: #59BAFC;
             flex-direction: column;
-            border: 1px solid black;
             height: 100%;
             justify-content: center;
             align-items: center;
@@ -40,6 +61,7 @@ section#registration-popup {
             justify-content: center;
             align-items: flex-start;
             padding: 20px;
+            background-color: white;
         }
 
         .message-form .headline-wrapper {
