--- a/sass/index.scss
+++ b/sass/index.scss
@@ -13,3 +13,9 @@
 @import "./components/map";
 @import "./components/about";
 
+.custom-font {
+  font-family: 'MyFont', Arial, sans-serif;
+  font-weight:normal;
+  font-style:normal;
+}
+
