--- a/sass/index.scss
+++ b/sass/index.scss
@@ -12,10 +12,15 @@
 @import "./components/popup";
 @import "./components/map";
 @import "./components/about";
+@import "./components/footer";
+@import "./components/media";
+@import "./components/aboutNew";
+
 
 .custom-font {
   font-family: 'MyFont', Arial, sans-serif;
   font-weight:normal;
   font-style:normal;
 }
+
 
