--- a/sass/base/_config.scss
+++ b/sass/base/_config.scss
@@ -3,12 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-
+body{
+	font-family: "MyFont", Arial, sans-serif;
+	font-weight: normal;
+    font-style: normal;
+}
+p{
+	font-size: 18px;
+}
 a {
     text-decoration: none;
     color: black;
-    
+
 }
 
 
