--- a/sass/components/_building.scss
+++ b/sass/components/_building.scss
@@ -2,20 +2,22 @@
     width: 100%;
     margin-top: 200px;
 
+
     .wrapper {
+        position: relative;
         max-width: 80%;
         margin: auto;
-        display: flex;
-        flex-direction: column;
 
+        .building-wrapper{
+             padding-bottom: 200px;
+        }
         .img-wrapper {
             // border: 1px solid green;
-            position: relative;
-            bottom: 180px;
-            right: 19%;
+            position: absolute;
+            bottom: 0;
 
             img {
-                width: 130%;
+                width: 100%;
             }
         }
 
