--- a/sass/components/_map.scss
+++ b/sass/components/_map.scss
@@ -1,21 +1,17 @@
 #location-map {
-    height: 600px;
+    height: auto;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    border: 2px solid steelblue;
-    margin-bottom: 10px;
-    margin-top: 10px;
 
+    h2{
+        margin-left: 10%;
+    }
+
+    .map-wrapper{
+        width: 100%;
+        height: 400px;
+    }
     .map-wrapper iframe {
         height: 100%;
         width: 100%;
     }
-
-    .map-wrapper,
-    .about-us-wrapper {
-        flex: 1;
-    }
-
-
 }
