--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -86,7 +86,44 @@
 
     }
 }
+.floor-wrapper-mobile{
+     display: none;
+            align-items: center;
+            justify-content: center;
+            margin: 30px 5% 0;
+            position: relative;
+            text-align: center;
 
+            &::after {
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 1px;
+                background-color: black;
+                top: 50px;
+                left: 0;
+            }
+
+            li {
+                padding: 0 10px;
+                position: relative;
+ 
+            }
+
+            li:not(:last-of-type) {
+
+                &::after {
+                    position: absolute;
+                    content: "";
+                    width: 1px;
+                    height: 10px;
+                    background-color: black;
+                    top: 8px;
+                    right: 0;
+                }
+            }
+            padding-inline-start: 0px;
+}
 @media(max-width:600px) {
     
 }
