--- a/sass/components/_map.scss
+++ b/sass/components/_map.scss
@@ -4,6 +4,7 @@
 
     h2{
         margin-left: 10%;
+        font-family: "Sandro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     }
 
     .map-wrapper{
